--- a/application/template/index.html
+++ b/application/template/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-
+{% include file="common/header.html" %}
+{%$index1|data1:"value1"%}
+{%$index2|data2:"value2"%}
+{% include file="tools.html" %}
 </body>
 </html>
